force-app/main/default/objects/Recibo_de_Cobro__c/Recibo_de_Cobro__c.object-meta.xml
<CustomObject>
    <description>Recibo de cobro individual dentro de un Plan de Pagos. Representa una cuota programada con su estado de pago. Hijo Master-Detail de Plan_de_Pagos__c.</description>
    <label>Recibo de Cobro</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Numero de recibo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recibos de Cobro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>