force-app/main/default/objects/Recibo_de_Cobro__c/fields/Aseguradora_nombre_del__c.field-meta.xml
<CustomField>
    <fullName>Aseguradora_nombre_del__c</fullName>
    <description>Nombre de la aseguradora, heredado desde Plan de Pagos &gt; Seguro &gt; Aseguradora.</description>
    <formula>00Nct000002Kbez.00Nct000002KbGn.00Nct000002Km2X.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aseguradora</label>
    <type>Text</type>
</CustomField>