force-app/main/default/objects/Recibo_de_Cobro__c/fields/Cliente_nombre__c.field-meta.xml
<CustomField>
    <fullName>Cliente_nombre__c</fullName>
    <description>Nombre del cliente, heredado desde Plan de Pagos &gt; Seguro &gt; Cliente.</description>
    <formula>IF(Plan_de_Pagos__r.Seguro__r.Cliente__r.IsPersonAccount, TRIM(Plan_de_Pagos__r.Seguro__r.Cliente__r.FirstName &amp; &quot; &quot; &amp; Plan_de_Pagos__r.Seguro__r.Cliente__r.LastName), Plan_de_Pagos__r.Seguro__r.Cliente__r.Name)</formula>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>