force-app/main/default/objects/Recibo_de_Cobro__c/fields/Dias_mora__c.field-meta.xml
<CustomField>
    <fullName>Dias_mora__c</fullName>
    <description>Dias de mora del recibo (TODAY - Fecha_programada, si no pagado). Formula.</description>
    <formula>IF(
  AND( ISBLANK( Fecha_pago__c ), Fecha_programada__c &lt; TODAY() ),
  TODAY() - Fecha_programada__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de mora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>