force-app/main/default/objects/Recibo_de_Cobro__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado de cobro del recibo. Se actualiza por trigger: Pendiente a Pagado cuando Monto_pagado&gt;=Monto_programado; Pendiente a Vencido cuando Fecha_programada&lt;TODAY y no pagado.</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
                <label>Pago parcial</label>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Reembolsado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>