force-app/main/default/objects/Recibo_de_Cobro__c/fields/Fecha_pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pago__c</fullName>
    <description>Fecha en la que se registro el pago. Null si el recibo aun no se ha pagado.</description>
    <label>Fecha de pago</label>
    <type>Date</type>
</CustomField>