force-app/main/default/objects/Recibo_de_Cobro__c/fields/Fecha_programada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_programada__c</fullName>
    <description>Fecha en la que este recibo debe pagarse (vencimiento).</description>
    <label>Fecha programada</label>
    <required>true</required>
    <type>Date</type>
</CustomField>