force-app/main/default/objects/Recibo_de_Cobro__c/fields/Intentos_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Intentos_Contacto__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de intentos de contacto (llamadas + mensajes) realizados para cobrar este recibo. Se incrementa desde VoiceCall y Messaging. Driver de escalamiento.</description>
    <label>Intentos de Contacto</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>