force-app/main/default/objects/Recibo_de_Cobro__c/fields/Monto_pagado__c.field-meta.xml
<CustomField>
    <fullName>Monto_pagado__c</fullName>
    <description>Monto efectivamente pagado. Puede ser menor (parcial) o igual al monto programado.</description>
    <label>Monto pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>