force-app/main/default/objects/Recibo_de_Cobro__c/fields/Monto_programado__c.field-meta.xml
<CustomField>
    <fullName>Monto_programado__c</fullName>
    <description>Monto que debe cobrarse en este recibo.</description>
    <label>Monto programado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>