force-app/main/default/objects/Recibo_de_Cobro__c/fields/Motivo_No_Pago__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Pago__c</fullName>
    <description>Obligatorio cuando el recibo pasa a Vencido. Capturado por Camila o por operaciones tras llamada.</description>
    <label>Motivo No Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente decide cancelar</fullName>
            </value>
            <value>
                <fullName>Disputa de monto</fullName>
            </value>
            <value>
                <fullName>Falta de liquidez</fullName>
            </value>
            <value>
                <fullName>Inconformidad con poliza</fullName>
            </value>
            <value>
                <fullName>No contactable</fullName>
            </value>
            <value>
                <fullName>Olvido</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Problema con metodo de pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>