force-app/main/default/objects/Recibo_de_Cobro__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Numero secuencial del recibo dentro del plan (1, 2, 3...). Se asigna por trigger al crear.</description>
    <label>Numero de cuota</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>