force-app/main/default/objects/Recibo_de_Cobro__c/fields/Plan_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Pagos__c</fullName>
    <description>Plan de Pagos padre. Master-Detail: cuando se elimina el plan, sus recibos se eliminan.</description>
    <label>Plan de Pagos</label>
    <referenceTo>Plan_de_Pagos__c</referenceTo>
    <relationshipLabel>Recibos de Cobro</relationshipLabel>
    <relationshipName>Recibos_de_Cobro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>