force-app/main/default/objects/Recibo_de_Cobro__c/fields/Poliza_numero__c.field-meta.xml
<CustomField>
    <fullName>Poliza_numero__c</fullName>
    <description>Numero de poliza, heredado desde Plan de Pagos &gt; Seguro.</description>
    <formula>Plan_de_Pagos__r.Seguro__r.Numero_poliza__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de poliza</label>
    <type>Text</type>
</CustomField>