force-app/main/default/objects/Recibo_de_Cobro__c/fields/Prorroga_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>Prorroga_Aplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si se otorgó prórroga al cliente para este recibo. Cuando es TRUE, Camila suspende la cadencia de cobranza hasta nueva fecha.</description>
    <label>Prórroga Aplicada</label>
    <type>Checkbox</type>
</CustomField>