force-app/main/default/objects/Recibo_de_Cobro__c/fields/Referencia_pago__c.field-meta.xml
<CustomField>
    <fullName>Referencia_pago__c</fullName>
    <description>Folio de autorizacion, referencia SPEI, numero de cheque, o identificador del pago.</description>
    <externalId>true</externalId>
    <label>Referencia de pago</label>
    <length>80</length>
    <type>Text</type>
</CustomField>