force-app/main/default/objects/Recibo_de_Cobro__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <description>Saldo pendiente de este recibo: Monto_programado - Monto_pagado (si no esta pagado/cancelado). Formula, se usa como fuente del roll-up Saldo_pendiente__c del plan.</description>
    <formula>IF(
  OR( ISPICKVAL( Estado__c , &quot;Pagado&quot;), ISPICKVAL( Estado__c , &quot;Cancelado&quot;), ISPICKVAL( Estado__c , &quot;Reembolsado&quot;) ),
  0,
  MAX( 0, Monto_programado__c - BLANKVALUE( Monto_pagado__c, 0 ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>