force-app/main/default/objects/Recibo_de_Cobro__c/fields/Semaforo_cobranza__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_cobranza__c</fullName>
    <description>Semaforo visual del estado de cobranza del recibo. Verde=al dia, Amarillo=por vencer en 3 dias, Rojo=vencido, Blanco=cancelado.</description>
    <formula>IF(
  OR(ISPICKVAL(Estado__c, &quot;Pagado&quot;), ISPICKVAL(Estado__c, &quot;Reembolsado&quot;)),
  &quot;🟢 Al dia&quot;,
  IF(
    ISPICKVAL(Estado__c, &quot;Cancelado&quot;),
    &quot;⚪ Cancelado&quot;,
    IF(
      OR(ISPICKVAL(Estado__c, &quot;Vencido&quot;), Fecha_programada__c &lt; TODAY()),
      &quot;🔴 Vencido&quot;,
      IF(
        Fecha_programada__c - TODAY() &lt;= 3,
        &quot;🟡 Por vencer&quot;,
        &quot;🟢 Al dia&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semaforo cobranza</label>
    <type>Text</type>
</CustomField>