force-app/main/default/objects/Recibo_de_Cobro__c/listViews/Pagados_mes_actual.listView-meta.xml
<ListView>
    <fullName>Pagados_mes_actual</fullName>
    <columns>Poliza_numero__c</columns>
    <columns>Cliente_nombre__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_pago__c</columns>
    <columns>Monto_pagado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pagado</value>
    </filters>
    <filters>
        <field>Fecha_pago__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Pagados del mes actual</label>
</ListView>