force-app/main/default/objects/Recibo_de_Cobro__c/listViews/Pendientes_mes_actual.listView-meta.xml
<ListView>
    <fullName>Pendientes_mes_actual</fullName>
    <columns>Poliza_numero__c</columns>
    <columns>Cliente_nombre__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_programada__c</columns>
    <columns>Monto_programado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <filters>
        <field>Fecha_programada__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Pendientes del mes actual</label>
</ListView>