force-app/main/default/objects/Recibo_de_Cobro__c/listViews/Por_cobrar_esta_semana.listView-meta.xml
<ListView>
    <fullName>Por_cobrar_esta_semana</fullName>
    <columns>NAME</columns>
    <columns>Cliente_nombre__c</columns>
    <columns>Poliza_numero__c</columns>
    <columns>Aseguradora_nombre_del__c</columns>
    <columns>Fecha_programada__c</columns>
    <columns>Monto_programado__c</columns>
    <columns>Semaforo_cobranza__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente,Parcial</value>
    </filters>
    <filters>
        <field>Fecha_programada__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Por cobrar esta semana</label>
</ListView>