force-app/main/default/objects/Recibo_de_Cobro__c/listViews/Por_cobrar_pendientes.listView-meta.xml
<ListView>
    <fullName>Por_cobrar_pendientes</fullName>
    <columns>Poliza_numero__c</columns>
    <columns>Cliente_nombre__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_programada__c</columns>
    <columns>Monto_programado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <filters>
        <field>Fecha_programada__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Por cobrar (pendientes)</label>
</ListView>